--- a/index.html
+++ b/index.html
@@ -209,17 +209,15 @@
 
         <section class="about-text">
           <p>
-            I'm Creative Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+            Saya memiliki skill dibidang Front End Dev, dan Desain, Yang bekerja dibidang pengembangan web dan media cetak.
+            mengubah masalah rumit menjadi desain yang sederhana, indah, dan intuitif.
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            Pekerjaan saya adalah membangun situs web dan desain agar fungsional dan mudah digunakan, dan pastinya menarik.
+            Selain itu, saya
+            memberikan sentuhan pribadi pada produk Anda dan memastikannya menarik perhatian dan mudah digunakan. Tujuan saya adalah menyampaikan
+            pesan dan identitas Anda dengan cara yang paling kreatif. Saya membuat desain web untuk banyak perusahaan merek terkenal.
           </p>
         </section>
 
@@ -230,7 +228,7 @@
 
         <section class="service">
 
-          <h3 class="h3 service-title">What i'm doing</h3>
+          <h3 class="h3 service-title">Pengalaman Saya</h3>
 
           <ul class="service-list">
 
@@ -242,10 +240,10 @@
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Web design</h4>
+                <h4 class="h4 service-item-title">Design</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Desain paling modern dan berkualitas tinggi, dibuat pada tingkat profesional.
                 </p>
               </div>
 
@@ -261,7 +259,7 @@
                 <h4 class="h4 service-item-title">Web development</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Pengembangan situs berkualitas tinggi pada tingkat profesional.
                 </p>
               </div>
 
@@ -277,7 +275,7 @@
                 <h4 class="h4 service-item-title">Mobile apps</h4>
 
                 <p class="service-item-text">
-                  Professional development of applications for iOS and Android.
+                  Pengembangan aplikasi profesional untuk iOS dan Android.
                 </p>
               </div>
 
@@ -293,7 +291,7 @@
                 <h4 class="h4 service-item-title">Photography</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  Saya membuat foto berkualitas tinggi dalam kategori apa pun pada tingkat profesional.
                 </p>
               </div>
 
@@ -643,7 +641,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
+                <data value="80">70%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -656,7 +654,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Graphic design</h5>
-                <data value="70">70%</data>
+                <data value="70">80%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -669,7 +667,7 @@
 
               <div class="title-wrapper">
                 <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
+                <data value="90">70%</data>
               </div>
 
               <div class="skill-progress-bg">
@@ -1146,7 +1144,7 @@
         <section class="mapbox" data-mapbox>
           <figure>
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d199666.5651251294!2d-121.58334177520186!3d38.56165006739519!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x809ac672b28397f9%3A0x921f6aaa74197fdb!2sSacramento%2C%20CA%2C%20USA!5e0!3m2!1sen!2sbd!4v1647608789441!5m2!1sen!2sbd"
+              src="https://www.google.com/maps/place/Batam,+Kota+Batam,+Kepulauan+Riau/@0.8371521,103.7234476,10z/data=!3m1!4b1!4m6!3m5!1s0x31d9bce8c054ce05:0x3039d80b220cbb0!8m2!3d1.1300779!4d104.0529207!16zL20vMDM1Ymp3?entry=ttu&g_ep=EgoyMDI0MTAyOS4wIKXMDSoASAFQAw%3D%3D"
               width="400" height="300" loading="lazy"></iframe>
           </figure>
         </section>
