--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vCard - Personal Portfolio</title>
+  <title>Portofolio Alvin</title>
 
   <!--
     - favicon
@@ -128,14 +128,14 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+            <a href="https://www.youtube.com/@Alvin2103" class="social-link">
+              <ion-icon name="logo-youtube"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-twitter"></ion-icon>
+            <a href="https://api.whatsapp.com/send/?phone=+6281927906395&text=I%27m+interested+in+your+portofolio&type=phone_number&app_absent=0" class="social-link">
+              <ion-icon name="logo-whatsapp"></ion-icon>
             </a>
           </li>
 
