--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/Alvin.jpeg" alt="Om Kharche" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Alvin21" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Om Kharche">Alvin Galang</h1>
+          <h1 class="name" title="Alvin21">Alvin Galang</h1>
 
           <p class="title">Desain And Web Dev</p>
         </div>
