--- a/index.html
+++ b/index.html
@@ -535,36 +535,31 @@
               <span>2019-2022</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Saya Mengambil Jurusan Perangkat Lunak
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of Texas</h4>
+              <h4 class="h4 timeline-item-title">Visigo Academy</h4>
 
-              <span>2018 — 2024</span>
+              <span>2023 — 2024</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                Saya Mengambil Jurusan Perhotelan
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">Universitas Terbuka</h4>
 
-              <span>2017 — 2018</span>
+              <span>2024 — Now</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
-                eos.
+                Saya Mengambil Jurusan Sistem Informatika
               </p>
 
             </li>
@@ -587,28 +582,24 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">PT WINNER GROUP</h4>
 
-              <span>2015 — Present</span>
+              <span>2020 — 2021</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+                Mengfilter Database Supaya Berjalan Sewajarnya
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">Design</h4>
 
-              <span>2013 — 2015</span>
+              <span>2016 - 2017</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Saya Bekerja Online Atau Biasa Disebut Dengan Kerja Remote
               </p>
 
             </li>
@@ -617,12 +608,10 @@
 
               <h4 class="h4 timeline-item-title">Web designer</h4>
 
-              <span>2010 — 2013</span>
+              <span>2016 — 2017</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+                Sama Seperti Desain Saya Kerja Remote
               </p>
 
             </li>
