--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logos.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
 
   <!--
     - custom css link
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Alvin21" width="80">
+          <img src="./assets/images/Alvin.jpeg" alt="Alvin21" width="80">
         </figure>
 
         <div class="info-content">
