--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/Alvin.jpeg" alt="Alvin21" width="80">
+          <img src="./assets/images/Alvin.jpeg" alt="Alvin21" width="80" border-radius="20px">
         </figure>
 
         <div class="info-content">
