--- a/index.html
+++ b/index.html
@@ -311,10 +311,10 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-1.png" alt="Uchiha Ucil Panjaitan" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Rohit Patil</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Uchiha Ucil Panjaitan</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
@@ -333,10 +333,10 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-2.png" alt="Jessica miller" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-2.png" alt="Uzumaki Udin Raja Gukguk" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Dipti Sinha</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Uzumaki Udin Raja Gukguk</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
@@ -355,10 +355,10 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-3.png" alt="Emily evans" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-3.png" alt="Kamikaze Roberto" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Emily evans</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Kamikaze Roberto</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
@@ -377,10 +377,10 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/avatar-4.png" alt="Henry william" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/avatar-4.png" alt="Sarutobi Ucok" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>Henry william</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Sarutobi Ucok</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
