--- a/index.html
+++ b/index.html
@@ -701,19 +701,19 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="a21.netlify.app">
+              <a href="https://a21.netlify.app">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/port1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/port1.jpg" alt="Flower" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Flower</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Web</p>
 
               </a>
             </li>
