--- a/index.html
+++ b/index.html
@@ -683,7 +683,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>Design</button>
               </li>
 
               <li class="select-item">
@@ -737,19 +737,19 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="#">
+              <a href="https://www.instagram.com/vinzkyle_">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/port2.jpg" alt="Desain Grafis" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">Desain Grafis</h3>
 
-                <p class="project-category">Web design</p>
+                <p class="project-category">All Design Portofolio</p>
 
               </a>
             </li>
