--- a/index.html
+++ b/index.html
@@ -736,20 +736,20 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="applications">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://pdash21.netlify.app">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/port3.jpg" alt="Dashboard" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">Dashboard</h3>
 
-                <p class="project-category">Applications</p>
+                <p class="project-category">Web</p>
 
               </a>
             </li>
