--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.youtube.com/@Alvin2103" class="social-link">
+            <a href="https://www.youtube.com/@Alvin2103" target="_blank" class="social-link">
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://api.whatsapp.com/send/?phone=+6281927906395&text=I%27m+interested+in+your+portofolio&type=phone_number&app_absent=0" class="social-link">
+            <a href="https://api.whatsapp.com/send/?phone=+6281927906395&text=I%27m+interested+in+your+portofolio&type=phone_number&app_absent=0" target="_blank" class="social-link">
               <ion-icon name="logo-whatsapp"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://www.instagram.com/alviin21_/" class="social-link">
+            <a href="https://www.instagram.com/alviin21_/" target="_blank" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -701,7 +701,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://a21.netlify.app">
+              <a href="https://a21.netlify.app" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -719,7 +719,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web design">
-              <a href="https://www.instagram.com/vinzkyle_">
+              <a href="https://www.instagram.com/vinzkyle_" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -737,7 +737,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://pdash21.netlify.app">
+              <a href="https://pdash21.netlify.app" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -755,7 +755,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="https://sj-rent.netlify.app/">
+              <a href="https://sj-rent.netlify.app/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
